crud-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crud-app
  namespace: crud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crud-app
  template:
    metadata:
      labels:
        app: crud-app
    spec:
      volumes:
        - name: crud-volume
          persistentVolumeClaim:
            claimName: crud-claim
      containers:
        - name: crud-app
          image: crud/app
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 60
            timeoutSeconds: 1
            failureThreshold: 10
            successThreshold: 1
          resources:
            limits:
              cpu: "150m"
              memory: "512Mi"
          volumeMounts:
            - name: crud-volume
              mountPath: /usr/src/app/files
