crud-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crud-app-svc
  namespace: crud
spec:
  type: NodePort
  selector:
    app: crud-app
  ports:
    - port: 2347
      protocol: TCP
      targetPort: 3000
