crud-app/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crud-app-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: crud-app-svc
                port:
                  number: 2347
          - path: /img
            pathType: Exact
            backend:
              service:
                name: crud-app-svc
                port:
                  number: 2347
